[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/scene/Stats.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/scene/enemy/Kremil.tscn" type="PackedScene" id=2]
[ext_resource path="res://script/Object/enemy/KremilEnemy.gd" type="Script" id=3]
[ext_resource path="res://assets/scene/Skills/Target/Pushing.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/scene/Skills/Instant/Summon.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/scene/enemy/main_system/WanderControl.tscn" type="PackedScene" id=12]

[sub_resource type="CircleShape2D" id=1]
radius = 43.4028

[node name="KremilMain" type="KinematicBody2D"]
z_index = 3
collision_layer = 16
collision_mask = 33
script = ExtResource( 3 )
enemy = "Kremil"

[node name="Stats" parent="." instance=ExtResource( 1 )]
maxhp = 45.0
attack = 10.0
defense = 3.0
max_speed = 60.0
speed = 40.0
attack_speed = 3.0
knockback = 200
delay_attack = 0.2

[node name="WanderControl" parent="." instance=ExtResource( 12 )]
wander_range = 32

[node name="ValidAttack" type="Timer" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
modulate = Color( 0.152941, 0.109804, 0.894118, 1 )
rotation = 1.5708

[node name="Out" type="Position2D" parent="."]

[node name="OutBullet" type="Position2D" parent="Out"]

[node name="Kremil" parent="." instance=ExtResource( 2 )]

[node name="PushCooldown" type="Timer" parent="."]
wait_time = 6.0
autostart = true

[node name="Pushing" parent="." instance=ExtResource( 4 )]
name_skill = "Crush!"
is_damaging = true
damage = 20.0
value_linear = 400.0
knockback = 300.0
cast_time = 1.0
speed = 400.0

[node name="CollisionShape2D" parent="Pushing/Area2D" index="0"]
shape = SubResource( 1 )

[node name="Summon" parent="." instance=ExtResource( 5 )]
name_skill = "Spidermite Summon"
automate = true
automate_time = 5.0
summon_size = 3
summon_idvalue = "spidermite"
lifespan = 10.0
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]
[connection signal="timeout" from="ValidAttack" to="." method="_on_ValidAttack_timeout"]
[connection signal="timeout" from="PushCooldown" to="." method="_on_PushCooldown_timeout"]

[editable path="Pushing"]
